--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,8 @@
 AC_INIT([karash], [0.1.0])
-AM_INIT_AUTOMAKE([-Wall])
+AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_PROG_CC
+AC_PROG_LEX
+AC_PROG_YACC
 AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_HEADERS([config.h])
 AC_OUTPUT
