check in autogenerated files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 BUILT_SOURCES = parser.h
 bin_PROGRAMS = karash
-karash_SOURCES = parser.y lex.l
+karash_SOURCES = karash.c parser.y lex.l
 AM_YFLAGS = -d
